# practice_rustler

./: README.md  mix.exs
lib/: monolith.ex
native/monolith/: Cargo.toml  README.md
native/monolith/src/: lib.rs
test/: monolith_test.exs
